<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        style="@style/TitleBar"
        android:id="@+id/linearLayout1">

        <ImageView
            style="@style/TitleBarLogo"
            android:id="@+id/img1"
            android:src="@drawable/exit"
            android:onClick="onClickExit"
            android:contentDescription="@null"
            android:layout_marginTop = "5dip"
            android:layout_marginRight="5dip"
            android:layout_marginLeft="5dip"
            android:layout_marginBottom = "4dip"
            android:paddingBottom = "2dip"
            android:background="@null"
            android:layout_gravity="center"
            android:paddingLeft="5dip"
            android:paddingRight="7dip" />

        <ImageView
            android:id="@+id/sep"
            android:contentDescription="@null"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@drawable/separator"
            android:layout_marginRight="7dip"/>

        <TextView
            style="@style/TitleBarText"
            android:id="@+id/tv1"
            android:paddingLeft = "8dip"
            android:text="@string/home"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:background="@color/colorAmareloClaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llRodape"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivPromocao"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:layout_height="wrap_content"
                    android:onClick="onClickPromocao"
                    android:src="@drawable/promocao" />

                <ImageView
                    android:id="@+id/ivBasico"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:layout_height="wrap_content"
                    android:onClick="onClickBasico"
                    android:src="@drawable/carrinho" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvPromocao"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/promocao" />

                <TextView
                    android:id="@+id/tvBasico"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/basico" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivConfig"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:layout_height="wrap_content"
                    android:onClick="onClickConfig"
                    android:src="@drawable/add" />

                <ImageView
                    android:id="@+id/ivSobre"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:layout_height="wrap_content"
                    android:onClick="onClickSobre"
                    android:src="@drawable/sobre" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvAddPrecos"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/addprecos" />

                <TextView
                    android:id="@+id/tvSobre"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/sobre" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llRodape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            style="@style/TitleBarText"
            android:id="@+id/tvRodape"
            android:layout_width="fill_parent"
            android:text="@string/rodape"
            android:background="@color/title_background"/>
    </LinearLayout>

</RelativeLayout>